--- a/src/main/resources/templates/gr/customer/mypage.html
+++ b/src/main/resources/templates/gr/customer/mypage.html
@@ -21,7 +21,8 @@
          *{
             font-family: 'NanumSquare';
          }
-
+         
+         /* 마이페이지 글자 */
          .myPageHeader{
             text-align: center;
          }
@@ -32,13 +33,86 @@
             color: black;
             font-size: 40px;
             text-align: center;
-            
          }
 
          .myPageHeader .semi-title{
             text-decoration: none;
             color: black;
          }
+
+         .myPageHeader .semi-title li{
+            text-align: center;
+         }
+
+
+         /* 마이페이지 메뉴 */
+         #semi-titlebox{
+            list-style: none;
+         }
+
+         #submenu .submenu-header{
+            width: 100%;
+            min-width: 1240px;
+            height: 50px;
+            background-color: #e9eeea;
+            border-top: 1px solid #D0DFD3;
+         }
+
+         #submenu .submenu-header ul{
+            width: 700px;
+            margin: 0 auto;
+         }
+
+         #submenu .submenu-header ul li:first-child{
+            width: 210px;
+         }
+
+         #submenu .submenu-header ul li{
+            list-style-type: none;
+            width: 206px;
+            text-align: center;
+            float: left;
+            position: relative;
+            line-height: 50px;
+         }
+
+         #submenu .submenu-header ul li a{
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+            vertical-align: middle; 
+            font-weight: normal;
+        }
+
+        /* 마이페이지 세부메뉴 */
+        #submenu .submenu-body{
+            width: 100%;
+            border-top: 1px solid #D0DFD3;
+        }
+        #submenu .submenu-body .inner{
+            width: 1240px;
+            margin: 0 auto;
+            padding: 9px 0;
+            display: table;
+        }
+
+        #submenu .submenu-body ul:first-child{
+            width: 210px;
+        }
+
+        #submenu .submenu-body .inner ul{
+            display: table-cell;
+            position: relative;
+        }
+
+        #submenu .submenu-body ul{
+            list-style-type: disc;
+            margin-block-start: 1em;
+            margin-block-end: 1em;
+        }
+
+         
+
         </style>
     </th:block>
 </head>
@@ -49,10 +123,54 @@
     
     <!-- 본문 영역 (padding-bottom은 건들면 안돼요ㅠㅠ footer랑 겹치는 문제 해결용임돵) -->
     <div style="padding-bottom: 300px;">
-        <div class="myPageHeader" style="padding-top: 60px;">
-            <a href="/SOBUN/customer/mypage.do" class="title">MY PAGE</a> <br/>
+        <div class="myPageHeader" style="padding-top: 60px; ">
+            <a href="/SOBUN/customer/mypage.do" class="title">MY PAGE</a><br/>
 
-            <a href="#" class="semi-title">HOME</a>&nbsp;&nbsp;>&nbsp;&nbsp;<a href="#" class="semi-title">MY PAGE</a>&nbsp;&nbsp;>
+            <ol id="semi-titlebox">
+                <li style="padding-top: 10px; padding-bottom: 20px;">
+                    <a href="#" class="semi-title">HOME</a>
+                    &nbsp;&nbsp;>&nbsp;&nbsp;
+                    <a href="#" class="semi-title">MY PAGE</a>
+                    &nbsp;&nbsp;>&nbsp;&nbsp;
+                </li>
+            </ol>
+        </div>
+
+        <div id="submenu">
+            <div class="submenu-header">
+                <ul>
+                    <li>
+                        <a href="#">관심물품</a>
+                    </li>
+                    <li>
+                        <a href="#">주문관리</a>
+                    </li>
+                    <li>
+                        <a href="#">정보관리</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="submenu-body">
+                <div class="inner">
+                    <ul>
+                        <li>
+                            <a href="#">관심물품 관리</a>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <a href="#">주문/배송조회</a>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <a href="#">회원정보 수정</a>
+                            <a href="#">주소 관리</a>
+                            <a href="#">회원 탈퇴</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
     </div>
